# tiralabra

./: .gitignore  README.md
rsa/: Cargo.toml  cobertura.xml  tarpaulin-report.html
rsa/benches/: benches.rs  generate_prime_benchmark.rs
rsa/documentation/: howto.md  implementation.md  specifications.md  tarpaulin.html  tests.md
rsa/documentation/criterion/report/: index.html
rsa/documentation/criterion2/data/main/encrypt_and_decrypt/1024 bits/: benchmark.cbor  measurement_230703053452.cbor
rsa/documentation/criterion2/data/main/encrypt_and_decrypt/128 bits/: benchmark.cbor  measurement_230703053356.cbor
rsa/documentation/criterion2/data/main/encrypt_and_decrypt/2048 bits/: benchmark.cbor  measurement_230703053827.cbor
rsa/documentation/criterion2/reports/encrypt_and_decrypt/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/1024 bits/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/128 bits/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/2048 bits/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/256 bits/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/4096 bits/: index.html
rsa/documentation/criterion2/reports/encrypt_and_decrypt/512 bits/: index.html
rsa/src/: decryption.rs  encryption.rs  keygen.rs  lib.rs  main.rs  padding.rs  prime_func.rs  rsa.rs  test_prime.rs  testers.rs  ui.rs
rsa/src/tests/: test.rs
rsa/tests/: tests.rs
rsa/weekly_reports/: final_week.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
(+7 files in other folders)
