[package]
name = "rsa"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
num-traits = "0.2"
num-integer = "0.1.45"
criterion = "0.5.1"
num-bigfloat = "1.6.2"
checkstyle_formatter = "1.0.2"
f128 = "0.2.9"

[dependencies.malachite]
version = "0.3.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
